# myairflow

./: README.md  Untitled.ipynb  Untitled1.ipynb  make_data.sh  pyproject.toml
Note/: Tracking.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb
dags/: bbqdags  catchup.py  data_ref.py  hello.py  make_wiki.py  movie.py  movie_after.py  movie_spark.py  myetl.py  seoul.py  soul.py  virtua.py  virtual.py
pyspark/: movie_meta.py
src/myairflow/: imsi.py
tests/: test_imsi.py
