[project]
name = "myairflow"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "khr0106", email = "kanghr990106@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
