[project]
name = "myairflow"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "khr0106", email = "kanghr990106@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "pyarrow>=19.0.1", "fastparquet>=2024.11.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
dev = [
    "jupyterlab>=4.3.6",
]
